2005-05-19  Albert Chu  <chu11@llnl.gov>

	* Rename status to metric due to design and goal differences from
	original ganglia implementation.

	* Begin rework of node data lists and hashes into one global node
	data list and hash.
	
2005-05-18  Albert Chu  <chu11@llnl.gov>

	* Complete status listener.
	
2005-05-17  Albert Chu  <chu11@llnl.gov>

	* Removed unused error codes.

	* Begin status server work.
	
2005-05-17  Albert Chu  <chu11@llnl.gov>

	* cerebro.spec.in: Update chaos build.
	
	* tagged cerebro-1-0-0-pre1
	
2005-05-16  Albert Chu  <chu11@llnl.gov>

	* Typo fixes.

	* Fix libdir path calculation.
	
2005-05-15  Albert Chu  <chu11@llnl.gov>

	* Slight library function names re-wording.
	
2005-05-11  Albert Chu  <chu11@llnl.gov>

	* Hide remaining functions that shouldn't be exported by
	libcerebro, or hide through not distributing .h file and
	underscoring them.

	* Added nodes iterator interface to libcerebro.

2005-05-10  Albert Chu  <chu11@llnl.gov>

	* More manpage cleanup/fixes.

	* Small design cleanup/changes.

	* cerebro.spec.in: Add daemon start/stop installation routines.
	
2005-05-09  Albert Chu  <chu11@llnl.gov>

	* Hide functions that shouldn't be exported.

	* New CEREBRO_DEBUG definition.  Rework code to use instead of
	NDEBUG.

2005-05-08  Albert Chu  <chu11@llnl.gov>

	* More manpage additions.
	
2005-05-06  Albert Chu  <chu11@llnl.gov>

	* Minor bug fixes.
	
2005-05-05  Albert Chu  <chu11@llnl.gov>

	* Re-org libcerebro include headers.

	* Various bug fixes.

	* Continue addition of manpages.
	
2005-05-04  Albert Chu  <chu11@llnl.gov>

	* Major code cleanup in preparation for beta release.

	* Rework so libcerebro doesn't export pthread functions.

	* Begin writing manpages.
	
2005-05-03  Albert Chu  <chu11@llnl.gov>

	* Rework config file and config module into one load_config
	libcerebro call.  Rework libcerebro and cerebrod around this new
	API.

	* Various library cleanup.  Function renaming, err_debug_lib,