@@ -22,6 +22,8 @@ Design/Re-Code
 - only one load function for libcerebro?
 - default timeout_len configurable in config file
   - necessary for event based up/down
+- list interface w/ iterators count, foreach, find, etc.
+  - and type num func??
 - merge server datas into one hash??
 - merge servers into one server??
 - gendersllnl config, up listening threads dependent on cluster size
