@@ -5,7 +5,9 @@
 
 	* Begin rework of node data lists and hashes into one global node
 	data list and hash.
-	
+
+	* Added float and double marshalling/unmarshalling functions.
+
 2005-05-18  Albert Chu  <chu11@llnl.gov>
 
 	* Complete status listener.
